Name in debian control file fixed

--- a/debian/control
+++ b/debian/control
@@ -34,4 +34,4 @@ Description: The complete and simply to use backup solution for your Wii games
  - Supported formats: ISO, CISO, WIA, WDF, WBFS files, WBFS partitions
  - Supports aqua or brushed metal style on Mac OS X
  - Supports the following languages: english, german, dutch, italian, spanish, french, norwegian
- Wii Backup Fusion needs 'Wimm's ISO Tools' to run! Infos and download: http://wit.wiimm.de
+ Wii Backup Fusion needs 'Wiimm's ISO Tools' to run! Infos and download: http://wit.wiimm.de
